# rust-challenge-payments

./: .gitignore  Cargo.toml  README.md
src/: main.rs  tests.rs
