[package]
name = "rust-challenge-payments"
version = "1.1.0"
authors = ["Jonathan Mercier-Ganady <jmgr@jmgr.info>"]
description = "Processes a list of transaction and outputs the final state of clients"
edition = "2021"

[dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
rust_decimal = "1.36"
clap = { version = "4.5", features = ["derive", "cargo"] }
derive_more = {  version = "1.0", features = ["add", "add_assign", "display"] }
thiserror = "2.0"

[dev-dependencies]
rust_decimal_macros = "1.36"
